--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <h1> Top 25 Highest Grossing Movies Of All Time </h1> 
+
+<div class="grid-container">
+</div>
+
+<script src="script.js"></script>
+
 </body>
 </html>
