--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <nav class="navbar">
@@ -12,14 +12,12 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="form.html">Form</a></li>
     </ul>
-</nav>
+</nav>  
+<form> 
+<label ></label>
 
-   <h1> Top 25 Highest Grossing Movies Of All Time </h1> 
-
-<div class="grid-container">
-</div>
-
-<script src="script.js"></script>
-
+<script src="./script.js"> 
+</script>
+</form>
 </body>
 </html>
