--- a/form.html
+++ b/form.html
@@ -13,8 +13,24 @@
         <li><a href="form.html">Form</a></li>
     </ul>
 </nav>  
+<h1> Add a Movie!</h1>
 <form> 
-<label ></label>
+<label for="title"> Title:</label> 
+  <input type ="text" placeholder="Ex.Avengers: Doomsday">
+ 
+  <br>
+  <label for="director"> Director:</label> 
+  <input type="text"> 
+  
+  <br>
+  <label for="releaseDate">Year of Release:</label> 
+  <input type="text" maxlength="4" placeholder="Ex. 2026"> <br>
+ 
+   <label for="imgSrc"> Image Link:</label> 
+               <input type="text"> <br>
+
+  <input class="button" type="reset">
+  <input type="submit"> 
 
 <script src="./script.js"> 
 </script>
