--- a/form.html
+++ b/form.html
@@ -15,15 +15,15 @@
 </nav>  
 <h1> Add a Movie!</h1>
 <form> 
-<label for="title"> Title:</label> 
+<label id ="title-input" for="title"> Title:</label> 
   <input type ="text" placeholder="Ex.Avengers: Doomsday">
  
   <br>
-  <label for="director"> Director:</label> 
+  <label id="director-input" for="director"> Director:</label> 
   <input type="text"> 
   
   <br>
-  <label for="releaseDate">Year of Release:</label> 
+  <label id= "release-date-input" for="releaseDate">Year of Release:</label> 
   <input type="text" maxlength="4" placeholder="Ex. 2026"> <br>
  
    <label for="imgSrc"> Image Link:</label> 
